--- a/style/colors.css
+++ b/style/colors.css
@@ -6,6 +6,7 @@
 	--primary_color: #8b2be2;
 	--primary_color-dark-1: #780cdb;
 	--primary_color-dark-2: #5906a5;
+	--primary_color-dark-2_95: #5906a5f2;
 
 	/* SECONDARY 1 */
 	--secondary_color_1-light-2_20: #f174d233;
