--- a/style/index.css
+++ b/style/index.css
@@ -510,7 +510,7 @@ html {
 							& img {
 								max-width: 400px;
 								border-radius: 50%;
-								box-shadow: 0 0 2px var(--text_color_white);
+								box-shadow: 0 0 0 2px var(--text_color_white), 0 0 25px var(--text_color_white);
 
 								@media (max-width: 768px) {
 									width: 75%;
